# Ravya-AI-

./: README.md  chapter_1.json  ingest_pipeline.py  q.json  q_chem.json  q_test.json
ncert-offline-rag/: README.md  ingest_pipeline.py  pyproject.toml  q.json  requirements.txt
ncert-offline-rag/bundles/class_8_science_en/: chunks.jsonl  id_map.pkl  manifest.json  model.json  version.txt
ncert-offline-rag/data/chunks/: chapter_1.jsonl
ncert-offline-rag/data_fixed/: chapter_1.jsonl  embeddings.npy
ncert-offline-rag/docs/: E2E_INSTRUCTIONS.md  RUNBOOK.md
ncert-offline-rag/examples/: sample_input.jsonl
ncert-offline-rag/scripts/: augment_jsonl.py  embed_chunks.py  embed_chunks.py.bak  export_bundle.sh  run_ingest.sh  validate_bundle.sh
ncert-offline-rag/src/: types.py
ncert-offline-rag/src/ingestion/: chroma_wrapper.py  chunker.py  embeddings.py  export_faiss.py  ingest_jsonl.py
ncert-offline-rag/src/pi_runtime/: README.md  embed_query.py  generate_answer.py  load_bundle.py  rag_answer.py  rag_cli.py  rag_generate.py  retrieve.py
ncert-offline-rag/src/rag/: ask.py  build_prompt.py  build_prompt_teacher.py  call_gema.py  check_embedding_match.py  debug_retrieve.py  debug_retrival.py  export_bundle_from_data.py  gemma_call.py  inspect_query.py  interactive_cli.py  load_bundle.py  prompt.py  rag_answer.py  rag_teacher.py  retrieve.py
ncert-offline-rag/src/types.egg-info/: PKG-INFO  (+2 more)
ncert-offline-rag/tests/: pytest.ini  rag_teacher_unitTest.py  test_bundle_export.py  test_ingest.py  test_ingest_coercion.py pytest.inl  test_retrieval.py  test_teacher_mode.py
(+54 files in other folders)
