[tool]
name = "ncert-offline-rag"
version = "0.1.0"
description = "An offline-first educational robot for serving NCERT/CBSE content to rural students."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[dependencies]
numpy = "^1.21.0"
pandas = "^1.3.0"
faiss-cpu = "^1.7.0"
sentence-transformers = "^2.1.0"
chroma = "^0.1.0"
ollama = "^0.1.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"